<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="144dp"
        tools:ignore="HardcodedText"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="22dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:alpha="0"
            android:text="@string/msg1"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            android:textColor="@color/grey_700"
            android:background="@drawable/flat_shadow_reorder"
            android:textSize="20sp"
            tools:alpha="1"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="8dp"
            android:alpha="0"
            android:gravity="center"
            android:textColor="@color/grey_700"
            android:text="@string/msg2"
            android:background="@drawable/flat_shadow_reorder"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle.Inverse"
            android:textSize="20sp"
            tools:alpha="1"
            />

        <Button
            android:id="@+id/btn_choice2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="26dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:scaleX="0"
            android:scaleY="0"
            android:text="@string/msg3"
            android:background="@drawable/flat_shadow_reorder"
            />

        <Button
            android:id="@+id/btn_choice1"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:scaleX="0"
            android:scaleY="0"
            android:text="@string/msg4"
            android:background="@drawable/flat_shadow_reorder"
            />

    </LinearLayout>

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center"
        android:src="@drawable/app_icon"
        tools:visibility="gone"
        />
</FrameLayout>